2007-07-26  Jürg Billeter  <j@bitron.ch>

	* vala/valamemorymanager.vala, vala/valasemanticanalyzer.vala,
	  gobject/valacodegenerator.vala,
	  gobject/valacodegeneratorassignment.vala,
	  gobject/valacodegeneratorinvocationexpression.vala: support element
	  access for types implementing Gee.List or Gee.Map

2007-07-26  Jürg Billeter  <j@bitron.ch>

	* vala/valastruct.vala, gobject/valacodegeneratormethod.vala,
	  gobject/valacodegeneratorstruct.vala: use GSlice and generate free
	  function for reference-type structs with a creation method

2007-07-25  Jürg Billeter  <j@bitron.ch>

	* vala/valaarray.vala: remove comments of overridden methods

2007-07-25  Jürg Billeter  <j@bitron.ch>

	* vala/valainvokable.vala, vala/valamemorymanager.vala,
	  vala/valasymbolresolver.vala, gobject/valacodegenerator.vala,
	  gobject/valacodegeneratorassignment.vala,
	  gobject/valacodegeneratorclass.vala,
	  gobject/valacodegeneratormethod.vala: add dup_func parameter to
	  generic classes, fix some memory management issues with generic types

2007-07-25  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegenerator.vala, gobject/valacodegeneratorclass.vala,
	  gobject/valacodegeneratormethod.vala,
	  gobject/valacodegeneratorstruct.vala: don't expose private classes in
	  public header files

2007-07-25  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegeneratorassignment.vala: ensure that index expression
	  in element access doesn't get evaluated more than once

2007-07-25  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodefunction.vala: add void to function declarations
	  without parameters as required by C89

2007-07-24  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala, gobject/valacodegenerator.vala:
	  add support for iteration over Gee.Iterable collections

2007-07-24  Jürg Billeter  <j@bitron.ch>

	* vala/valamemorymanager.vala: skip memory manager for VAPI files
	* vala/valasemanticanalyzer.vala: remove unnecessary code in
	  visit_creation_method
